crates/gurih_dsl/tests/snapshots/error_snapshots__duplicate_field_error.snap
---
source: crates/gurih_dsl/tests/error_snapshots.rs
expression: s
---
error[validation_error]: Duplicate field name 'email' in entity 'User'
 --> test.kdl:4:9
  |
4 |         string "email"
  |         ^^^^^^^^^^^^^^ Duplicate field name 'email' in entity 'User'
